force-app/main/default/objects/VOB_Codes_and_Fields__mdt/VOB_Codes_and_Fields__mdt.object-meta.xml
<CustomObject>
    <label>VOB Codes and Fields</label>
    <pluralLabel>VOB Codes and Fields</pluralLabel>
</CustomObject>