force-app/main/default/objects/VOB_Codes_and_Fields__mdt/fields/Benefit_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Coverage__c</fullName>
    <label>Benefit Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>