force-app/main/default/objects/VOB_Codes_and_Fields__mdt/fields/Benefit_Level__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Level__c</fullName>
    <label>Benefit Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>