force-app/main/default/objects/VOB_Codes_and_Fields__mdt/fields/Benefit_Period__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Period__c</fullName>
    <label>Benefit Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>