force-app/main/default/objects/VOB_Codes_and_Fields__mdt/fields/In_Plan_Network__c.field-meta.xml
<CustomField>
    <fullName>In_Plan_Network__c</fullName>
    <label>In Plan Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <default>true</default>
                <label>Y</label>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>