force-app/main/default/objects/VOB_Codes_and_Fields__mdt/fields/VOB_Field__c.field-meta.xml
<CustomField>
    <fullName>VOB_Field__c</fullName>
    <label>VOB Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>